# mcp-server-foundation

./: .actrc  .dockerignore  .env.act  .env.example  .gitignore  .pre-commit-config.yaml  .safety-project.ini  .secrets  .yamllint.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-08-09-comprehensive-test-suite/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-09-comprehensive-test-suite/sub-specs/: technical-spec.md
.agent-os/specs/2025-08-09-docker-cicd-pipeline/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-09-docker-cicd-pipeline/sub-specs/: technical-spec.md
.github/workflows/: ci.yml  local-integration.yml  local-test.yml
docs/: local-github-actions-testing.md
scripts/: init-db.sql  test-docker-health.sh  test-multiarch-build.sh  test-with-services.sh  validate-ci-fixes.sh
src/mcp_server/: __init__.py  __version__.py  config.py  health.py  main.py
tests/: conftest.py  test_config.py  test_docker.py  test_integration.py  test_main.py  test_resources.py  test_tools.py  utils.py
